--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="mainbox">
         <div class="title-box">
             <div class="profile-img">
-                <img src="img/img/ataho.jpg" width="80px" alt="사진">
+                <img src="img/ataho.jpg" width="80px" alt="사진">
             </div>
         <h1>최선아</h1>
         <p class="name-text">개발자</p>
@@ -51,9 +51,9 @@
         </section>
         <div class="sns-wrap">
         <a href="http://facebook.com"><img class="sns-img" src="img/img/facebook.png"></a>
-        <img class="sns-img" src="img/img/insta.png">
-        <img class="sns-img" src="img/img/linked-in.png">
-        <img class="sns-img" src="img/img/twitter.png">
+        <img class="sns-img" src="img/insta.png">
+        <img class="sns-img" src="img/linked-in.png">
+        <img class="sns-img" src="img/twitter.png">
         </div>
     </div>
     <footer>
