--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
            
         </section>
         <div class="sns-wrap">
-        <a href="http://facebook.com"><img class="sns-img" src="img/img/facebook.png"></a>
+        <a href="http://facebook.com"><img class="sns-img" src="img/facebook.png"></a>
         <img class="sns-img" src="img/insta.png">
         <img class="sns-img" src="img/linked-in.png">
         <img class="sns-img" src="img/twitter.png">
