--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>배다슬의 이력서</title>
+    <title>최선아의 이력서</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
