--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <div class="mainbox">
         <div class="title-box">
             <div class="profile-img">
-                <img src="img/ataho.jpg" width="80px" alt="사진">
+                <img src="img/me.jpg" width="70px" alt="사진">
             </div>
         <h1>최선아</h1>
-        <p class="name-text">개발자</p>
+        <p class="name-text">웹 개발자</p>
     </div>
         <section>
             <h2>ABOUT ME</h2>
-            <p class="about-me-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet perspiciatis odio nesciunt ea atque a cum laboriosam at autem! Officiis tenetur ab recusandae voluptate distinctio adipisci perferendis dolorum dignissimos harum.</p>     
+            <p class="about-me-text">#성실 #재미 #노력파 #도전 #새로움</p> 
+            <br>
+            <p>안녕하세요</p>    
         </section>
         <section>
             <h2>projects</h2>
