드디어 완성

--- a/index.html
+++ b/index.html
@@ -6,60 +6,112 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
+   
     <div class="mainbox">
         <div class="title-box">
             <div class="profile-img">
                 <img src="img/me.jpg" width="70px" alt="사진">
             </div>
         <h1>최선아</h1>
-        <p class="name-text">웹 개발자</p>
+        <p class="name-text">웹 개발자 지망생</p>
     </div>
         <section>
             <h2>ABOUT ME</h2>
             <p class="about-me-text">#성실 #재미 #노력파 #도전 #새로움</p> 
             <br>
-            <p>안녕하세요</p>    
+            <p>안녕하세요 웹 개발 지망생 최선아 입니다<br>
+            현재 대림대 스마트 소프트웨어과에서 배움을 쌓고 있습니다<br>
+            고등학교 시절 그래픽디자인을 배웠었고 지금은 백엔드쪽 개발자를 꿈꾸고 있습니다<br>
+            배우는 과목중 JAVA를 가장 좋아하고 있습니다 <br>
+            언제 어디서든 환영받을 수 있는 사람이 되도록 실력을 갈고 닦겠습니다</p>    
         </section>
         <section>
-            <h2>projects</h2>
+            <h2>Ability</h2>
             <div class="float-wrap">
-                <p class="title-text">프로젝트1</p>
-                <p class="year-text">2021</p>
+                <p class="title-text">보유 자격증</p>
+                <p class="year-text">2021 ~ 2017</p>
             </div>
-            <p class="desc-text">Front Web Developer</p>
-            <p class="desc-subtext">HTML, CSS, JS, jQuery</p>
+            <p class="desc-text">Graphic designer</p>
+            <p class="desc-subtext">ITQ(한글,파포,엑셀)A등급 , GTQ 2급 , 컴퓨터그래픽스운용기능사 , 전자출판기능사 , 컴퓨터활용능력 2급 , AutoCAD 2급</p>
             <div class="float-wrap">
-                <p class="title-text">프로젝트2</p>
-                <p class="year-text">2020</p>
+                <p class="title-text">웹 개발 공부</p>
+                <p class="year-text">2020 ~ ing</p>
             </div>
-            <p class="desc-text">App Developer</p>
-            <p class="desc-subtext">Java, Android</p>
+            <p class="desc-text">Web Developer</p>
+            <p class="desc-subtext">JAVA, JSP, HTML, CSS, JavaScript</p>
+            <p class="desc-subtext"> <br> <자신이 생각하는 현재 능력치></p>
+
+            <div class="graph-head"> 
+                <div class="graph-title"> Java </div>
+            <div class="graph">
+                <strong class="bar" style="width: 56%;">56%</strong>
+            </div>
+            </div>
+            <div class="graph-head">
+                <div class="graph-title"> JSP </div>
+                <div class="graph">
+                    <strong class="bar" style="width: 30%;">30%</strong>
+                </div>
+            </div>
+            <div class="graph-head">
+                <div class="graph-title"> HTML </div>
+                <div class="graph">
+                    <strong class="bar" style="width: 45%;">45%</strong>
+                </div>
+            </div>
+            <div class="graph-head">
+                <div class="graph-title"> CSS </div>
+                <div class="graph">
+                    <strong class="bar" style="width: 36%;">38%</strong>
+                </div>
+            </div>
+            <div class="graph-head">
+                <div class="graph-title"> JS </div>
+                <div class="graph">
+                    <strong class="bar" style="width: 49%;">49%</strong>
+                </div>
+            </div>
+        
         </section>
         <section>
-            <h2>Activities</h2>
+            <h2>Needs & Activities</h2>
             <div class="float-wrap">
-                <p class="title-text">활동 1</p>
-                <p class="year-text">2020 ~ 2021</p>
+                <p class="title-text">앞으로 공부하고 싶은것</p>
+                <p class="year-text">2021 ~ Future</p>
             </div>
-            <p class="desc-text">활동 1에 대한 설명 1</p>
-            <p class="desc-subtext">활동 1에 대한 설명2</p>
+            <p class="desc-text">HTML과 CSS로 만든 웹 콘텐츠에 JS를 입히고 간단히 사용해 보고싶다 <br>
+            JAVA 언어로 DB에 접근하여 칼럼 값을 가져오는것 부터 다루는것 까지 경험해보고 싶다 <br>
+            웹 콘텐츠 제작을 전체적으로 경험해보며 웹의 전반적 흐름을 이해하고 싶다 </p>
+            <p class="desc-subtext">자신의 역량 그래프를 100% 로 채우는게 목표!</p>
             <div class="float-wrap">
-                <p class="title-text">활동 2</p>
-                <p class="year-text">2019 ~ 2020</p>
+                <p class="title-text">과거 활동 내역</p>
+                <p class="year-text">2019 ~ 2021</p>
             </div>
-            <p class="desc-text">활동 2에 대한 설명 1</p>
-            <p class="desc-subtext">활동 2에 대한 설명2</p>
+            <p class="desc-text"> <a href="https://github.com/CSN-ah22/Personal-Storage/tree/Study-group-Activity"> 2021 겨울방학 스터디 </a> 
+            ,국제 기능올림픽대회 특별기술교육 수료 , 안양•과천시교원총연합회장상 , 전자출판다자인한마당 우수상
+            </p>
+
+            <p class="desc-subtext">🔽</p>
+            <p class="desc-subtext">겨울방학동안 스터디를 활동하며 만든 java 파일들 입니다<br>
+                스터디의 방식은 아래와 같았습니다<br>
+                스스로 문제 만들기 - 스터디원에게 제공 - 스터디원들이 풀기 - 문제의 정답 제공 - 다른 조원의 문제 풀기 - 반복<br>
+                이런 방식으로 java 실력이 많이 올랐습니다<br>
+                하지만 github에 익숙하지 않아 미루다 한꺼번에 올리게 되었네요<br>
+                파일에 번호를 붙였으니 초보 부터 중급까지 어떤 문제를 풀었는지 보시면 좋을것 같습니다<br>
+                감사합니다</p>
            
         </section>
         <div class="sns-wrap">
         <a href="http://facebook.com"><img class="sns-img" src="img/facebook.png"></a>
-        <img class="sns-img" src="img/insta.png">
-        <img class="sns-img" src="img/linked-in.png">
-        <img class="sns-img" src="img/twitter.png">
+        <a href="https://www.instagram.com/"><img class="sns-img" src="img/insta.png"></a>
+        <a href="https://www.notion.so/6854e20b2415451391a95016eab0530b?v=3a13c3542c254b57929752d774613c1a"><img class="sns-img" src="img/notion.png"></a>
+        <a href="https://twitter.com/?lang=ko"><img class="sns-img" src="img/twitter.png"></a>
         </div>
     </div>
     <footer>
         <p>Copyright ATAHO ALL rights reserved.</p>
     </footer>
+
 </body>
 </html>
